# moonlane

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
moonlane-interpreter/: Cargo.toml
moonlane-interpreter/docs/: architecture.md  evaluator.md  typechecker.md
moonlane-interpreter/docs/decisions/: adr-0001-typeregistry-structure-and-location.md  adr-0002-inference-pass-structure.md  adr-0003-v01-feature-set-scope.md  adr-0004-interpreter-architecture.md  adr-0005-if-expression-grammar-and-ast-unification.md  adr-0006-evaluator-runtime-design.md  adr-0007-array-value-semantics-via-deep-clone.md  adr-0008-thread-local-call-stack-for-traces.md  adr-0009-type-ascription-erased-at-construction.md  adr-0010-generic-monomorphization-via-runtime-construction.md  adr-0011-let-poly-mono-env-absence-invariant.md  adr-0012-generic-struct-split-env-in-construction.md  adr-0013-aspect-impl-flat-env-and-method-keys.md  adr-0014-mut-self-writeback-for-iterators.md  adr-0015-grammar-rule-ordering-for-keyword-prefix-identifiers.md  adr-0018-none-literal-not-a-keyword.md  adr-0023-module-paths-are-hierarchical.md  adr-0024-t0009-detection-in-typechecker-not-name-resolver.md  adr-0025-unified-type-definition-registry.md  adr-0026-glob-import-tiers.md  adr-0027-std-core-virtual-module.md
moonlane-interpreter/src/: grammar.pest  lib.rs  main.rs  name_resolver.rs
moonlane-interpreter/src/ast/: mod.rs
moonlane-interpreter/tests/: lib.rs
tree-walk-interpreter/: Cargo.toml
tree-walk-interpreter/src/: main.rs
tree-walk-interpreter/tests/: parsing_tests.rs  typeinference_tests.rs
(+419 files in other folders)
