[package]
name = "yolang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yolang"
path = "src/main.rs"

[dependencies]
# PEG parser generator — grammar lives in src/grammar.pest
pest = "2"
pest_derive = "2"

# Nicer error reporting with source context
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
pest-ast = "0.3.6"
from-pest = "0.3.4"
clap = { version = "4.6.0", features = ["derive"] }
